Model來源處理完畢

--- a/Workload/Web.config
+++ b/Workload/Web.config
@@ -10,7 +10,9 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Workload-20150723014858.mdf;Initial Catalog=aspnet-Workload-20150723014858;Integrated Security=True" providerName="System.Data.SqlClient" />
-  <add name="WorkloadEntities" connectionString="metadata=res://*/Models.Workload.csdl|res://*/Models.Workload.ssdl|res://*/Models.Workload.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Workload;persist security info=True;user id=MWHTool;password=Workload123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="WorkloadEntities" connectionString="metadata=res://*/Models.Workload.csdl|res://*/Models.Workload.ssdl|res://*/Models.Workload.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Workload;persist security info=True;user id=MWHTool;password=Workload123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="WorkloadEntities1" connectionString="metadata=res://*/Models.Workload.csdl|res://*/Models.Workload.ssdl|res://*/Models.Workload.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Workload;persist security info=True;user id=MWHTool;password=Workload123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
